# analogierechner

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  process_analogies.py  pyproject.toml  run_scirpts.sh  run_services.sh  streamlit_app.py
logs/: analogies_log.csv
scripts/: benchmark_analogies.py  delete_old_artifacts.sh  process_analogies.py
src/: streamlit_app.py
src/api/: api.py
src/core/: embedding_handler.py  logger.py
src/utils/: acronyms.py  downloadg_german_model.py
test/: test_embedding_handler.py
test/api/: test_api.py
