[tool.poetry]
name = "analogierechner"
version = "0.1.0"
description = "Analogierechner mit Embeddings"
authors = ["Lena Aretz"]

[tool.poetry.dependencies]
python = "~3.11.11"
sentence-transformers = "^2.2.2"
pandas = "^2.2.0"
plotly = "^5.18.0"
streamlit = "^1.41.0"
scikit-learn = "^1.2.2"
fasttext = "^0.9.3"
numpy = "^2.2.0"
google-cloud-storage = "^2.19.0"
fastapi = "^0.109.0"  # Aktuelle stabile Version
uvicorn = "^0.27.0"   # Aktuelle stabile Version
datasketch = "^1.6.5"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"