[tool.poetry]
name = "analogierechner"
version = "0.1.0"
description = "Analogierechner mit Embeddings"
authors = ["Lena Aretz"]
packages = [
    { include = "src" },
    { include = "src/core" }
]

[tool.poetry.dependencies]
python = "~3.11.11"
pandas = "^2.2.0"
streamlit = "^1.41.0"
scikit-learn = "^1.2.2"
fasttext = "^0.9.3"
numpy = "^2.2.0"
google-cloud-storage = "^2.19.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
datasketch = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
jupyterlab = "^4.1.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
notebook = "^7.3.2"
plotly = "^5.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]